# esp32-weather

./: Cargo.toml  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
other/: main-wifi.rs  main_st7789.rs
src/: app.rs  bar.rs  button.rs  config.rs  display.rs  http_server.rs  main.rs  oled.rs  state.rs  weather.rs  wifi.rs
src/assets/: img2raw.txt  wifi.raw
